Added a test for running main in Program

--- a/GildedRose.Tests/GildedRose.Tests.csproj
+++ b/GildedRose.Tests/GildedRose.Tests.csproj
@@ -30,4 +30,8 @@
     <ProjectReference Include="..\GildedRose\GildedRose.csproj" />
   </ItemGroup>
 
+  <Target Name="Readme" AfterTargets="AfterBuild">
+  <Copy SourceFiles="Readme.txt" DestinationFolder="$(OutDir)" />
+  </Target>
+
 </Project>
